Добавлены методы для обновления статуса, поиска напоминаний для отправки